[package]
name = "bridge-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
borsh = "1"
ed25519-dalek = "1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"

solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
