[dependencies]
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
futures = "0.3"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

# Solana 1.18.x
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Borsh with derive (unlocks .try_to_vec())
borsh = { version = "1", features = ["derive"] }

# base64 0.22 uses the Engine trait
base64 = "0.22"

# Tokio + streams (you use tokio_stream in api.rs)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client — native-tls on Windows
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

# Web/API
axum = "0.7"
tower-http = "0.6"

# Utilities
bs58 = "0.5.1"

# SQLite only; turn OFF defaults so MySQL isn’t pulled in
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# If api.rs uses async-stream
async-stream = "0.3"

# Your signer imports this explicitly
ed25519-dalek = "=1.0.1"
